# Factur-IA

./: .dockerignore  .env.example  .gitignore  DASHBOARD_BACKEND_INTEGRATION.md  DATABASE_SAFETY_POLICY.md  DOCKER_VOLUMES_ANALYSIS.md  Dockerfile  PRIVACY_POLICY.md  PROJECT_OVERVIEW.md  REORGANIZATION_SUMMARY.md  ROUTES_REORGANIZATION.md  SEED_DATA_SUMMARY.md  TERMS_OF_SERVICE.md  alembic.ini  docker-compose.multitest.yml  docker-compose.yml  nixpacks.toml  package.json  pnpm-lock.yaml  railway.toml  reprocess_failed.py  requirements.txt  start.sh  test_alegra.py  turbo.json
apps/api/: .coveragerc  Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini  requirements_api.txt
apps/api/migrations/versions/: add_unit_conversion_fields.py
apps/api/scripts/: create_test_tenant.py  seed_invoices.py
apps/api/src/api/: deps.py  main.py
apps/api/src/api/routers/: admin.py  auth.py  dashboard.py  documents.py  integrations.py  inventory.py  invoices.py  recommendations.py  subscriptions.py  suppliers.py
apps/api/src/config/: plans.py
apps/api/src/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
apps/api/src/database/: connection.py  models.py
apps/api/src/models/: invoice.py
apps/api/src/repositories/: __init__.py  invoice_repository.py  tenant_repository.py
apps/api/src/services/: sales_sync_service.py
apps/api/src/services/document_processing/: amount_parser.py  dian_xml_extractor.py  digital_pdf_extractor.py  document_classifier.py  invoice_processor.py
apps/api/src/services/document_processing/textract/: textract_enhancer.py  textract_service.py
apps/api/src/services/duplicate_detection/: __init__.py  duplicate_detector.py
apps/api/src/services/integrations/: alegra_integration.py  integration_factory.py  inventory_sync_service.py  mayasis_integration.py
apps/api/src/services/ml_services/: price_utils.py  pricing_engine.py  product_matching.py  recommendation_service.py
apps/api/src/services/storage/: cleanup_service.py
apps/api/tests/: conftest.py
(+272 files in other folders)
